# opencode-gateway

./: .dockerignore  .env.example  .gitignore  .opencode-workflow.yaml  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.smoke.yml  docker-compose.test.yml  docker-compose.yaml  opencode_gateway_followup_review_issues.md  opencode_gateway_pr156_review.md  opencode_gateway_review_issues.md  pyproject.toml  requirements.txt
.ai/council/: current
.status/: issue15_design_section.txt  issue2_body.txt
alembic/: env.py
app/: __main__.py  main.py
frontend/: Dockerfile  app.js  docker-entrypoint.sh  index.html  nginx.conf  package.json  style.css  styles.css
scripts/: seed.py  worktree-manager.ps1  worktree-manager.sh
tests/: conftest.py  test_api_workspaces.py  test_app_factory.py  test_auth.py  test_auth_envelope.py  test_awx_client.py  test_cleaner.py  test_cleanup.py  test_cleanup_retention.py  test_config.py  test_cross_process_cancel.py  test_db_pool.py  test_entry_points.py  test_executor_loader.py  test_executors.py  test_executors_awx.py  test_executors_awx_mocktransport.py  test_factory.py  test_frontend.py  test_health.py  test_identity.py  test_ingest.py  test_job_model.py  test_jobs.py  test_local_executor.py  test_observations.py  test_policy.py  test_ports.py  test_runners.py  test_scheduler.py  test_scheduler_edge_cases.py  test_scheduler_integration.py  test_schema.py  test_secrets.py  test_serve_client.py  test_setup.py  test_smoke_local_stack.py  test_usage.py  test_webhooks.py  test_workspace_lifecycle.py  (+2 more)
(+134 files in other folders)
